# rust-midi-playground

./: Cargo.toml
src/: dsl.rs  duration.rs  main.rs  midi.rs  notes.rs  player.rs  sequence.rs  theory.rs
ui/: main.60
