[package]
name = "rust-midi-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
hamcrest2 = "*"
midir = "0.7.0"
midly = "0.5"
nom = "7.1.0"
pretty_assertions = "1.0.0"
rspec = "1.0.0"
