[package]
name = "rust-midi-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
const_format = "0.2.22"
eyre = "0.6.5"
hamcrest2 = "*"
markov = "1.1.0"
midir = "0.7.0"
midly = "0.5"
nom = "7.1.0"
num = "0.4.0"
pretty_assertions = "1.0.0"
rspec = "1.0.0"
signal-hook = "0.3.13"
