[package]
name = "rust-midi-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
const_format = "0.2.22"
eyre = "0.6.5"
hamcrest2 = "*"
itertools = "0.10.3"
markov = "1.1.0"
midir = "0.7.0"
midly = "0.5"
nom = "7.1.0"
num = "0.4.0"
petgraph = "0.5"
pretty_assertions = "1.0.0"
rand = "0.8.4"
rspec = "1.0.0"
signal-hook = "0.3.13"
sixtyfps = "0.1.5"

[build-dependencies]
sixtyfps-build = "0.1.5"